envia mensagem para envolvidos nas reuniões

--- a/projetos/templates/projetos/reuniao.html
+++ b/projetos/templates/projetos/reuniao.html
@@ -147,7 +147,7 @@
           <input type="checkbox" name="enviar_mensagem" value="sim" id="enviar_mensagem"
           {% if not user.eh_admin %}checked{% endif %}>
           <label for="enviar_mensagem">
-            {% lng "Enviar mensagem para envolvidos (orientador e grupo)" "Send message to involved people (advisor and group)" %}
+            {% lng "Enviar mensagem para envolvidos (sempre para orientador, coorientadores e grupo de estudantes)" "Send message to involved people (always to advisor, co-advisors and group of students)" %}
           </label>
         </div>
         
