--- a/projetos/templates/projetos/bancas_tabela_agenda.html
+++ b/projetos/templates/projetos/bancas_tabela_agenda.html
@@ -98,16 +98,16 @@
         {% endwith %}
       {% endfor %}
     {% include "tabelas_bottom.html" %}
+    <script>
+      {% include "seleciona_linha_tabelas.html" with select="tipob" tabela="Bancas" data="user" %}
+    </script>
   </div>
 
   <script>
-    {% include "seleciona_linha_tabelas.html" with select="tipob" tabela="Bancas" data="user" %}
-
     function carrega_site() {
       {% include "edicao_puxar_local_ou_versao.js" %}
     }
     window.onload = carrega_site
-  
   </script>
 
   {% include "edicoes_ajax.html" with tabela="Bancas" %}
