ajustando pergunta do formulário

--- a/estudantes/templates/estudantes/estudante_feedback.html
+++ b/estudantes/templates/estudantes/estudante_feedback.html
@@ -69,7 +69,9 @@
     </div>
 
     <div class="mt-5" style="max-width: 860px;">
-      {% lng "O quanto você recomendaria a " "How much would you recommend the " %}{{organizacao}}?
+      {% lng "Agora que você conhece mais da " "Now that you know more about the " %}
+      {{organizacao}},
+      {% lng "empresa que você realizou o projeto esse semestre, essa seria uma das primeiras opções para você fazer estágio ou ser contratado de forma efetiva?" "company where you carried out the project this semester, would this be one of the first options for you to do an internship or be hired effectively?" %}
     </div>
     <div class="form-check">
       <div class="form-check form-check-inline">
